--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@feathersjs/authentication-client": "^1.0.11",
+    "@feathersjs/feathers": "^3.3.1",
+    "@feathersjs/socketio-client": "^1.2.1",
     "core-js": "^2.6.5",
+    "feathers-vuex": "^1.7.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuetify": "^2.0.0",
-    "vuex": "^3.0.1"
+    "vuetify": "^2.0.10",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
@@ -28,7 +33,6 @@
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.18.2",
-    "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
