--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,9 @@
     "jest": "jest"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.13",
+    "@feathersjs/authentication-jwt": "^2.0.7",
+    "@feathersjs/authentication-local": "^1.2.7",
     "@feathersjs/configuration": "^2.0.4",
     "@feathersjs/errors": "^3.3.4",
     "@feathersjs/express": "^1.2.7",
@@ -37,7 +40,10 @@
     "@feathersjs/socketio": "^3.2.7",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
+    "feathers-mongoose": "^8.0.2",
     "helmet": "^3.15.0",
+    "mongodb-core": "^3.2.7",
+    "mongoose": "^5.6.11",
     "serve-favicon": "^2.5.0",
     "winston": "^3.0.0"
   },
