--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "feathers-vuex": "^1.7.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-doc-preview": "^0.3.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.10",
     "vuex": "^3.1.1"
