--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,16 @@
     "eslint.packageManager": "yarn",
     "eslint.run": "onSave",
     "eslint.autoFixOnSave": true,
-    "eslint.alwaysShowStatus": true
+    "eslint.alwaysShowStatus": true,
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#65c89b",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#945bc4",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "panel.border": "#65c89b",
+        "sideBar.border": "#65c89b",
+        "editorGroup.border": "#65c89b"
+    },
+    "peacock.color": "#42b883"
 }
