--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "feathers-vuex": "^1.7.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.6.10",
+    "vue-doc-preview": "^0.3.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.10",
     "vuex": "^3.1.1"
@@ -25,7 +26,7 @@
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-e2e-cypress": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
+    "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
